<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#304769"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="capstone.sda.com.literatures.Activity.SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/signup_et_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/signup_et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/signup_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:padding="10dp"
        android:layout_marginBottom="24dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/White"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/signup_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />


    <!--<EditText
        android:id="@+id/signup_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp" />-->

    <EditText
        android:id="@+id/signup_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/signup_et_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#4B65C9"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/signup_btn_back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

</LinearLayout>