<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#304769"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingTop="60dp"
    android:paddingEnd="50dp"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:paddingStart="50dp"
    android:paddingBottom="50dp"
    tools:context="capstone.sda.com.literatures.Activity.SignInActivity">


    <ImageView
        android:layout_gravity="top"
        android:id="@+id/imageView0"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/lit" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />


    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#4B65C9"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/not_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/login_btn_go_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/register"
        android:textColor="@android:color/white" />


</LinearLayout>