<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#304769"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="capstone.sda.com.literatures.Activity.RegisterActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="true"
        app:fontFamily="serif-monospace"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:id="@+id/pass_showhidepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/etPassword"
            android:layout_alignRight="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textColor="#304769"
            android:text="show"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/pass_hidepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/etPassword"
            android:layout_alignRight="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textColor="#304769"
            android:text="hide"
            android:visibility="gone"
            android:textAllCaps="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/cpass_showhidepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/etConfirmPassword"
        android:layout_alignRight="@+id/etConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="#304769"
        android:text="show"
        android:textAllCaps="true"/>

        <TextView
            android:id="@+id/cpass_hidepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/etConfirmPassword"
            android:layout_alignRight="@+id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textColor="#304769"
            android:text="hide"
            android:visibility="gone"
            android:textAllCaps="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#4B65C9"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

</LinearLayout>